[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["http2"] }
hyper-util = "0.1.7"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tower-service = "0.3.3"
