[package]
name = "search-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "search_engine"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[features]
default = ["cli"]
cli = []
web = []

[dependencies]
axum = "0.7.5"
epub = "2.1.2"
html2text = "0.12.5"
hyper = { version = "1.4.1", features = ["http2"] }
hyper-util = "0.1.7"
pdf-extract = "0.7.9"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
text_io = "0.1.12"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tower-service = "0.3.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "json" ] }
